src/main/java/com/example/tpotrilateracion/errors/PalabrasDispares.java
package com.example.tpotrilateracion.errors;


public class PalabrasDispares extends RuntimeException{
    public PalabrasDispares() {
        super("Cantidad incorrecta de palabras");
    }
}